# sitting_duck

./: .gitignore  .gitmodules  .index-cpp.parquet  .index-python.parquet  .index-sql.parquet  .readthedocs.yaml  AI_AGENT_GUIDE.md  AI_USAGE.md  API_REFERENCE.md  CLAUDE.md  CMakeLists.txt  FINAL_FUNCTION_COUNT.md  FUNCTION_CLEANUP_SUMMARY.md  MINIMAL_API_SUMMARY.md  Makefile  PROJECT.md  README.md  RELEASE_NOTES_v1.3.0.md  REPOSITORY_CLEANUP_SUMMARY.md  STRUCT_MIGRATION_STATUS.md  ast  ast-nav-indexed  ast-refactored  ast.py  ast_index.duckdb.wal  benchmark_template.sql  coverage_simple.txt  debug_memory.cpp  demo_parquet_index.sql  extension_config.cmake  make-debug.out  make.out  mkdocs.yml  parse-ast.out  test_analysis.md  test_basic_functionality.sql  test_counts.sql  test_cpp_query.cpp  test_debug.sql  test_debug_parse.cpp  (+20 more)
.github/workflows/: ExtensionTemplate.yml  MainDistributionPipeline.yml  build-custom-docker.yml  custom-distribution.yml
cmake/: BuiltinLanguages.cmake
docker/custom/: Dockerfile.linux_amd64  Dockerfile.linux_amd64_musl  Dockerfile.linux_arm64  README.md  build-images.sh
docs/: ADDING_NEW_LANGUAGES.md  AST_TOOL_IMPROVEMENTS.md  GIT_AWARE_AST_DATABASE.md  NATIVE_EXTRACTION_ARCHITECTURE.md  ai-agent-guide.md  index.md  native_extraction_semantics.md  requirements.txt
docs/api/: core-functions.md  output-schema.md  parameters.md  semantic-types.md  structural-analysis.md  utility-functions.md
docs/development/: architecture.md  contributing.md
docs/explanation/: architecture.md  how-parsing-works.md  native-extraction-semantics.md  native-extraction.md  scope-system.md  selector-engine.md
docs/guide/: cookbook.md  css-selectors.md  parsing-files.md  pattern-matching.md  semantic-types.md  structural-search.md  tutorial-pattern-matching.md
docs/how-to/: common-queries.md  complexity-analysis.md  cookbook.md  cross-language-analysis.md  extract-context.md  find-dead-code.md  multi-file-processing.md  parse-once-query-many.md  security-audit.md  selector-examples.md  structural-search.md
docs/languages/: enterprise.md  infrastructure.md  overview.md  scripting.md  systems.md  web.md
docs/planning/: v2-architecture.md
docs/plans/: 2026-03-08-qualified-name.md  2026-04-18-docs-restructure.md
docs/reference/: analysis-macros.md  css-attributes.md  css-pseudo-classes.md  css-selectors.md  functions.md  node-type-selectors.md  output-schema.md  parameters.md  pattern-matching.md  semantic-aliases.md  semantic-types.md  utility-functions.md
docs/releases/: v1.7.0.md  v1.7.1.md  v1.7.4.md  v1.8.0.md
docs/tutorials/: ai-agents.md  (+6 more)
examples/: simple_usage.md
generated_parsers/: MANIFEST
grammars/: README.md
patches/: fix-cpp-grammar-require.patch  fix-php-scanner-assert.patch  fix-rust-grammar-regex.patch  fix-typescript-grammar-require.patch
queries/: README.md  ast_queries.sql
scripts/: add_parsing_context.py  add_parsing_context_declarations.py  add_parsing_function.py  analyze_file_functions.py  analyze_file_simple.sql  apply_grammar_patches.sh  ast_tool_refactored.sh  ast_tool_v2.sh  clean_unified_backend.py  embed_sql_macros.py  fix_clean_api_test.py  fix_unified_backend.py  generate_all_parsers.sh  generate_def_file.py  migrate_ast_indexes.sql  migrate_tests_to_semantic_types.py  parquet_index_manager.py  remove_all_parsing_context.py  remove_parsing_context.py  test_language_subset.sh  update_rosetta_test_data.sh  update_test_names.py
src/: CLEANUP_SUMMARY.md  ast_file_utils.cpp  ast_helper_functions.cpp  ast_parser.cpp  ast_parsing_task.cpp  ast_sql_macros.cpp  ast_sql_macros.sql  ast_sql_macros_loader.cpp  ast_supported_languages_function.cpp  ast_type.cpp  ast_type_map_function.cpp  duckdb_ast_extension.cpp  dynamic_library_loader.cpp  grammars.cpp  language_adapter.cpp  language_adapter.cpp.backup  language_adapter_registry_init.cpp  language_config.cpp  language_config_json.cpp  language_handler.cpp  native_context_extraction.cpp  parse_ast_function.cpp  parse_ast_list_function.cpp  read_ast_function.cpp  read_ast_objects_function.cpp  read_ast_objects_hybrid.cpp  read_ast_streaming_function.cpp  register_language_function.cpp  semantic_type_codes_function.cpp  semantic_type_functions.cpp  semantic_type_logical_type.cpp  semantic_types.cpp  short_names_function.cpp  sitting_duck_extension.cpp  structured_ast_conversion.cpp  unified_ast_backend.cpp
test/: ARCHIVE_SUMMARY.md  SEMANTIC_TYPE_TEST_STRATEGY.md  TEST_STATUS.md  TEST_UPDATE_PLAN.md  bench_json_large.sql  bench_struct_large.sql  benchmark_json.sql  benchmark_struct.sql  calculate_descendants.sql  demo_get_source.sql  demo_source_extraction.sql  fixed_performance_test.sql  init_json.sql  init_struct.sql  json_to_struct_performance.sql  performance_test.sql  simple_performance_test.sql  simple_setup.sql  test_cte_source.sql  test_file_map.sql  test_get_source.sql  test_native_context_extraction.sql  test_peer_features.sql  test_scalar_cte.sql  working_performance_test.sql  working_source_extraction.sql
tracker/: PRIORITIES.md  README.md
workspace/: API_ANALYSIS.md  API_REFERENCE.md  CLEAN_API_DESIGN.md  SEGFAULT_ANALYSIS.md  analyze_function_tree.sql  correct_line_extraction.sql  cpp_analysis_results.md  debug_segfault_systematic.sh  descendant_count_diagram.md  extract_function_body.sh  extract_function_body_final.sh  extract_function_body_safe.sh  extract_functions.sh  extract_functions_corrected.sh  extract_functions_macro.sql  final_function_extractor.sql  final_tree_function_extractor.sql  find_breaking_point.sh  function_extraction_flow.md  improved_macros_concept.sql  init_test.sql  line_number_comparison.sql  macro_analysis.md  next_steps_plan.md  peek_mode_comparison.sql  production_function_extractor.sql  proper_tree_function_extractor.sql  segfault_minimal.sql  segfault_reproducer.sql  segfault_test.sql  semantic_type_analysis.sql  simple_function_extract.sql  simple_function_finder.sh  simple_tree_extract.sql  stress_test.sh  table_vs_monad_comparison.sql  test_case_type_issue.sql  test_complete_macro.sql  test_dot_syntax.sql  test_exact_issue.sql  (+15 more)
(+724 files in other folders)
